<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/tile_color"
        android:showAsAction="always|withText"
        android:title="@string/pref_tile_color_title">
    </item>
    <item
        android:id="@+id/apply"
        android:icon="@drawable/ic_action_tick"
        android:showAsAction="always|withText"
        android:title="@android:string/ok">
    </item>
    <item
        android:id="@+id/bg_color"
        android:showAsAction="never"
        android:title="@string/pref_bg_color_title">
    </item>
    <item
        android:id="@+id/icons_theme"
        android:showAsAction="never"
        android:title="@string/icons_theme">
    </item>
    <item
        android:id="@+id/icons_mono"
        android:checkable="true"
        android:checked="false"
        android:showAsAction="never"
        android:title="@string/pref_icons_mono_title">
    </item>
    <item
        android:id="@+id/icons_scale"
        android:showAsAction="never"
        android:title="@string/pref_scale_icon">
    </item>
    <item
        android:id="@+id/more"
        android:showAsAction="never"
        android:title="@string/more">
    </item>

</menu>