<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/tile_color"
        android:showAsAction="ifRoom|withText"
        android:title="@string/pref_tile_color_title">
    </item>
    <item
        android:id="@+id/apply"
        android:icon="@drawable/ic_action_tick"
        android:showAsAction="ifRoom|withText"
        android:title="@string/apply">
    </item>
    <item
        android:id="@+id/selected"
        android:enabled="false"
        android:showAsAction="ifRoom|withText"
        android:title="@string/selected"
        android:visible="false">
    </item>

    <item
        android:id="@+id/bg_color"
        android:showAsAction="never"
        android:title="@string/pref_bg_color_title"
		>
    </item>

    <item
        android:id="@+id/icons_mono"
        android:showAsAction="never"
        android:checkable="true"
        android:checked="false"
        android:title="@string/pref_icons_mono_title"
		>
    </item>
    <item
        android:id="@+id/icons_color"
        android:showAsAction="never"
        android:title="@string/pref_tint_color_title"
        android:enabled="false"
		>
    </item>
    <item
        android:id="@+id/icons_scale"
        android:showAsAction="never"
        android:title="@string/pref_scale_icon"
		>
    </item>
    <item
        android:id="@+id/font_size"
        android:showAsAction="never"
        android:title="@string/pref_scale_icon"
		>
    </item>
    <item
        android:id="@+id/font_color"
        android:showAsAction="never"
        android:title="@string/pref_font_color_title"
		>
    </item>
    <item
        android:id="@+id/transparent_incar"
        android:showAsAction="never"
        android:title="@string/pref_font_color_title"
        android:checkable="true"
        android:checked="false"
		>
    </item>
    <item
        android:id="@+id/transparent_settings"
        android:showAsAction="never"
        android:title="@string/pref_font_color_title"
        android:checkable="true"
        android:checked="false"
		>
    </item>
    
</menu>