<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
		>
<LinearLayout
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:padding="12dp"
		>

	<LinearLayout
			style="@style/panelHeader"
			android:orientation="vertical"
			android:id="@+id/widgets">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/panelHeaderText"
			android:text="@string/home_screen_widgets"
		/>

		<TextView
			android:text="@string/no_active_widgets_were_found"
			android:id="@+id/widgetsActive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@color/font_color_sec"/>
	</LinearLayout>

	<LinearLayout
			style="@style/panelHeader"
			android:layout_marginTop="@dimen/panel_header_margin"
			android:orientation="vertical"
			android:id="@+id/widgets">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/panelHeaderText"
				android:text="@string/pref_incar_mode_title"
				android:id="@+id/textView"
		/>

		<TextView
				android:text="Active"
				android:id="@+id/incarActive"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/font_color_sec"/>
	</LinearLayout>

	<Button
			style="@style/panelItem"
			android:layout_marginTop="1dp"
			android:text="@string/settings"
			android:id="@+id/incarSettings"
			android:drawableLeft="@drawable/ic_holo_settings"
			android:gravity="left|center_vertical"
			android:textColor="@color/font_color"
			android:drawablePadding="4dp"/>

	<LinearLayout
		style="@style/panelItem"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:layout_marginTop="1dp"
	>

		<Button
				android:layout_width="0dp"
				android:layout_weight="10"
				android:layout_height="wrap_content"
				android:text="@string/backup"
				android:id="@+id/incarBackup"
				android:drawableLeft="@drawable/ic_action_export"
				android:background="@drawable/panel_bg"
				android:padding="0dp"
				android:gravity="center_vertical|left"
				android:textColor="@color/font_color"
				android:drawablePadding="4dp"/>
		<View
				android:layout_height="match_parent"
				android:layout_width="1dp"
				android:background="@color/activity_bg"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="4dp"
				android:paddingRight="4dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"/>

		<Button
				android:layout_width="wrap_content"
				android:layout_weight="5"
				android:layout_height="wrap_content"
				android:text="@string/restore"
				android:id="@+id/incarRestore"
				android:drawableLeft="@drawable/ic_action_import"
				android:background="@drawable/panel_bg"
				android:padding="0dp"
				android:gravity="center_vertical|left"
				android:clickable="false"
				android:textColor="@color/font_color"
				android:drawablePadding="4dp"/>
	</LinearLayout>

	<TextView
		style="@style/panelHeader"
		android:layout_marginTop="@dimen/panel_header_margin"
		android:text="@string/information_title"
		android:id="@+id/textView5"
	/>

	<LinearLayout
			style="@style/panelItem"
			android:layout_marginTop="1dp"
			android:id="@+id/version"
			>

		<ImageView
				android:id="@android:id/icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:src="@drawable/ic_action_star_10"
				/>

		<RelativeLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingLeft="4dp">

			<TextView
					android:id="@android:id/title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:ellipsize="marquee"
					android:fadingEdge="horizontal"
					android:text="@string/version_title"
					style="@style/text_align_style"
					android:textColor="@color/font_color"/>

			<TextView
					android:id="@android:id/summary"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@android:id/title"
					android:layout_alignLeft="@android:id/title"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:maxLines="4"
					android:text="@string/version_summary"
					style="@style/text_align_style"
					android:textColor="@color/font_color_sec"/>

		</RelativeLayout>

	</LinearLayout>

	<Button
			style="@style/panelItem"
			android:layout_marginTop="1dp"
			android:text="@string/issue_title"
			android:id="@+id/feedback"
			android:drawableLeft="@drawable/ic_action_gplus"
			android:gravity="left|center_vertical"
			android:textColor="@color/font_color"
			android:drawablePadding="4dp"/>



		<TextView
			style="@style/panelHeader"
			android:layout_marginTop="@dimen/panel_header_margin"
			android:text="@string/system"
		/>

	<LinearLayout
			style="@style/panelItem"
			android:layout_marginTop="1dp"
			android:id="@+id/defaultApp"
			>

		<ImageView
				android:id="@android:id/icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:src="@drawable/ic_settings_applications"/>

		<RelativeLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingLeft="4dp">

			<TextView
					style="@style/text_align_style"
					android:id="@android:id/title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:ellipsize="marquee"
					android:fadingEdge="horizontal"
					android:text="@string/default_car_dock_app"
					android:textColor="@color/font_color"/>

			<TextView
					style="@style/text_align_style"
					android:id="@android:id/summary"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@android:id/title"
					android:layout_alignLeft="@android:id/title"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:maxLines="4"
					android:text="@string/not_set"
					android:textColor="@color/font_color_sec"/>
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>
</ScrollView>