<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="match_parent">
<LinearLayout
	style="@style/WizardPageContainer"
	android:orientation="vertical"
>

	<TextView
		style="@style/WizardPageTitle"
		android:text="@string/welcome"
	/>

	<TextView
		style="@style/wizardTextItem"
		android:text="@string/welcome_text"
		android:id="@+id/desc1"
	/>

	<TextView
		style="@style/wizardTextItem"
		android:text="@string/swipe_continue"
		android:textSize="20sp"
		android:textColor="@color/step_pager_selected_tab_color"
		android:padding="12dp"/>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:src="@drawable/widget_preview"
		/>

</LinearLayout>
</ScrollView>