<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/WizardPageContainer"
	android:orientation="vertical">

	<TextView
		style="@style/WizardPageTitle"
		android:text="@string/configure"
	/>

	<TextView
			android:text="@string/configure_text"
			style="@style/wizardTextItem"
			android:id="@+id/desc1"
	/>

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/settings_preview"
			android:paddingTop="12dp"
			android:adjustViewBounds="true"
			android:layout_gravity="center_horizontal"/>

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			>

		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_holo_settings"
				android:background="@color/panel_bg_pressed"
				android:layout_gravity="center"/>

		<TextView style="@style/wizardTextItem"
				  android:id="@+id/desc2"
				  android:text="@string/open_settings_description"
				  android:paddingLeft="4dp"
				  android:textSize="18dp"
				  android:gravity="left"
				/>
	</LinearLayout>

</LinearLayout>
</ScrollView>